# ChangeLog for media-gfx/cldg-themes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cldg-themes-10.0.1 (11 Dec 2009)

  11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldg-themes-10.0.1.ebuild:
  Version bump. Add update boot splash.

*cldg-themes-10.0 (04 Dec 2009)

  04 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cldg-themes-10.0.ebuild, +metadata.xml:
  Bump version.
