@@ -1,7 +1,9 @@
 DIST cldg-themes-10.0.tar.bz2 18610165 RMD160 b7c5514a9c1ec011a84216183f83f239644a0137 SHA1 c2de9d1cb81cf6cc8bde107853fd7e2f2ed41c9d SHA256 2f4bdfc2287af7232c597047e254bdcce0daeeab210c1a1e89c143dcee88a37e
 DIST cldg-themes-10.2.tar.bz2 18288136 RMD160 ab086afdeed9770b3853c60797a0d11f90082787 SHA1 48722111d7fe620acf40e9ea289e6a23c402a300 SHA256 3d2d6d303a6a068b1d6baef8b458438f017b488431e3e91d3dd9d5768edf0c4c
+DIST cldg-themes-10.4.tar.bz2 18135450 RMD160 746230ce88de3f16ae8175301b3279dd952e6f68 SHA1 9617b47c4b56926f2be0a421314d864523821511 SHA256 a2aaa82651217041f8b49f7331d6244ffeba2c7d9bd1e46cc4e2f0fbdef776c8
 EBUILD cldg-themes-10.0.1.ebuild 1464 RMD160 fa44dea1121d1764943731ac3c1c1feca96e4d11 SHA1 6be3245255c24241f19f289bc801701a05c99255 SHA256 4f9fdd12b1808175389623f8a052538caced7d171c92c25bff61af2848d14dc6
 EBUILD cldg-themes-10.0.ebuild 1329 RMD160 83b4fe1887cdd4e87af639948c3d755ef0ceb8ee SHA1 e8ea5cfcd1139760e460d148819ff68b719576a7 SHA256 ebe720efd92840d1d86aff132e511dd6a0be678fcc875d5a881e98ae01f9a9b3
 EBUILD cldg-themes-10.2-r3.ebuild 1542 RMD160 177d9fe378df5bb7f1012c82376c7a1efcb795df SHA1 a3d8d59dc909978c0d030c0f5ec1d9c13392ebbf SHA256 73d06d8943e36cd6a5ef14f7cfc35516dbf613c0e4e05462a1f3b6d0f1913aac
+EBUILD cldg-themes-10.4.ebuild 1542 RMD160 177d9fe378df5bb7f1012c82376c7a1efcb795df SHA1 a3d8d59dc909978c0d030c0f5ec1d9c13392ebbf SHA256 73d06d8943e36cd6a5ef14f7cfc35516dbf613c0e4e05462a1f3b6d0f1913aac
 MISC ChangeLog 440 RMD160 b7a3b4ad67eb1eab8b161aa66474dc471e484f30 SHA1 506ee259c03a2c38ead305d5324bf9b7faae8333 SHA256 b4760ee71b0518c874f1717c3cc55cb2ceb6ec4cce4f8ca3b5febbb92439db46
 MISC metadata.xml 262 RMD160 663e84f074fee7b06b0e8133fba6e5ef19e25c75 SHA1 4446020395d787f939246f39767f8633ea931a5e SHA256 e3852964a15875d8ea9ef0b30f6aba61440a7ecac12edc6e558bfdbc7f0aee3e
