@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/cldg-themes
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cldg-themes-10.4 (09 Mar 2010)
+
+  09 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cldg-themes-10.4.ebuild:
+  Bump version.
 
 *cldg-themes-10.0.1 (11 Dec 2009)
 
